# AgentDbg

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  ROADMAP.md  SPEC.md  pyproject.toml
.cursor/rules/: grounding.mdc
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: runapp.yml  unittest-fast.yml
agentdbg/: __init__.py  _integration_utils.py  cli.py  config.py  constants.py  events.py  exceptions.py  guardrails.py  loopdetect.py  server.py  storage.py  tracing.py  version.py
agentdbg/_tracing/: __init__.py  _context.py  _lifecycle.py  _recorders.py  _redact.py
agentdbg/integrations/: __init__.py  langchain.py
agentdbg/ui_static/: app.js  index.html  styles.css
docs/: architecture.md  cli.md  getting-started.md  index.md  integrations.md  north-star-v0-1.md  sdk.md
docs/reference/: trace-format.md
examples/demo/: langchain.py  pure_python.py
examples/langchain/: .gitignore  customer_support.py  minimal.py  pyproject.toml
examples/langchain/_customer_support/: README.md  agent.py  car_rentals.py  company_policies.py  database.py  excursions.py  flights.py  graph.py  hotels.py  prereq.py  utilities.py
examples/langchain/customer_support/: main.py
examples/langchain/minimal/: main.py
examples/langchain_minimal/: main.py
examples/minimal/: pyproject.toml  simple_agent.py
examples/minimal_agent/: main.py
schemas/: event.schema.json  run.schema.json
scripts/: smoke_path_traversal.sh
tests/: test_cli.py  test_config.py  test_guardrails.py  test_integration_run_lifecycle.py  test_langchain_integration.py  test_loopdetect.py  test_redaction.py  test_server.py  test_storage.py  test_tracing.py
tests/integrations/: test_crewai_integration.py  test_imports.py  test_integration_run_lifecycle.py  test_langchain_integration.py  test_openai_integration.py
tests/tracing/: test_tracing.py
