[project]
name = "agentdbg"
dynamic = ["version"]
description = "Local-first debugger for AI agents (traces, timeline UI, loop warnings)."
readme = "README.md"
license = "Apache-2.0"
license-files = [ "LICENSE" ]
authors = [
    { name = "z-a-f", email = "z.tahirov@gmail.com" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.135.0,<0.136.0",
    "pyyaml>=6.0.3,<6.1.0",
    "typer>=0.23.0,<0.24.0",
    "uvicorn>=0.41.0,<0.42.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "Topic :: Software Development :: Debuggers",

  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/AgentDbg/AgentDbg"

[project.scripts]
agentdbg = "agentdbg.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
]

[project.optional-dependencies]
langchain = ["langchain>=1.2.10"]
# crewai doesn't support latest OpenAI Agents SDK
crewai = ["crewai[tools]>=1.6.1"]
openai = [
    "openai-agents>=0.10.5",
]

[build-system]
# Wheel/sdist include agentdbg/ (and thus agentdbg/ui_static/) by default.
# Do not add only-include or only-packages that would exclude ui_static.
requires = ["hatchling>=1.28.0,<1.29.0", "versioningit"]
build-backend = "hatchling.build"

[tool.hatch.version]
default-version = "0.0.0+UNKNOWN"
source = "versioningit"
vcs = "git"
next-version = "smallest-release"

[tool.hatch.version.format]
distance = "{base_version}.post{distance}"
dirty = "{base_version}+local{distance}"
distance-dirty = "{base_version}.post{distance}+local"

[tool.hatch.version.write]
file = "agentdbg/_version.py"
template = """
# This file is managed by dynamic versioning. Do not edit manually.
version = "{version}""""

# [tool.hatch.build]


[tool.pytest.ini_options]
addopts = "-ra"
strict_markers = true
markers = [
  "slow: slower tests (excluded from fast CI)",
  "long: long-running tests (excluded from fast CI)",
  "longrunning: very long-running tests (excluded from fast CI)",
]
